--- a/index.html
+++ b/index.html
@@ -27,42 +27,41 @@
                   Jeux
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item " href="#">tests</a></li>
-                  <li><a class="dropdown-item " href="#">solutions</a></li>
-                  <li><a class="dropdown-item " href="#">previews</a></li>
-                  <li><a class="dropdown-item " href="#">sorties</a></li>
+                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/tests.htm">tests</a></li>
+                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cheats.htm">solutions</a></li>
+                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/previews.htm">previews</a></li>
+                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/sorties/dates-de-sortie.htm">sorties</a></li>
                 </ul>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Actualités
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item " href="#">solde</a></li>
-                    <li><a class="dropdown-item " href="#">culture geek</a></li>
-                    <li><a class="dropdown-item " href="#">astuces</a></li>
+                    <li><a class="dropdown-item " href="https://www.jeuxvideo.com/soldes.htm">solde</a></li>
+                    <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cross-media.htm">culture geek</a></li>
                   </ul>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Vidéos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item " href="#">à la une</a></li>
-                      <li><a class="dropdown-item " href="#">gaming live</a></li>
-                      <li><a class="dropdown-item " href="#">test</a></li>
-                      <li><a class="dropdown-item " href="#">gameplay</a></li>
+                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/videos-de-jeux.htm">à la une</a></li>
+                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/gaming_live.htm">gaming live</a></li>
+                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7780/">test</a></li>
+                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7365/">gameplay</a></li>
                     </ul>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Forum
                       </a>
                       <ul class="dropdown-menu">
-                        <li><a class="dropdown-item " href="#">PS5</a></li>
-                        <li><a class="dropdown-item " href="#">PC</a></li>
-                        <li><a class="dropdown-item " href="#">Switch</a></li>
+                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-3017788-0-1-0-1-0-playstation-5.htm">PS5</a></li>
+                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-6-0-1-0-1-0-materiel-informatique.htm">PC</a></li>
+                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-3007199-0-1-0-1-0-nintendo-switch.htm">Switch</a></li>
                       </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link color-nav" href="#">Contacts</a>
+                <a class="nav-link color-nav" href=contact.html style="text-decoration:none; color: #000;">Contacts</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -125,6 +124,7 @@
      
 <div class="tips container mt-4">
   <h2>Nos dernières astuces</h2>
+  <a href="page6.html" style="text-decoration:none; color: #000;">
 <div class="card mb-3">
   <img src="img/ree4.jpg" class="card-img-top" alt="re4">
   <div class="card-body">
@@ -133,8 +133,10 @@
     <p class="card-text"><small class="text-body-secondary">Il y a 5 mins</small></p>
   </div>
 </div>
+</a>
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
+    <a href="page7.html" style="text-decoration:none; color: #000;">
     <div class="card">
       <img src="img/tloy.jpg" class="card-img-bot" alt="thelastofus">
       <div class="card-body">
@@ -142,8 +144,10 @@
         <p class="card-text">Vous avez succombé à l’envie de (re)vivre l’histoire aussi bien touchante que troublante d’Ellie et Joel avec le portage PC du remake de The Last of Us Part 1 ? Une telle aventure ne peut pas se faire sans une soluce ! Ainsi, afin de compléter le jeu à 100%, retrouvez dans cet article la solution complète du titre phare de Naughty Dog.</p>
       </div>
     </div>
+  </a>
   </div>
   <div class="col">
+    <a href="page8.html" style="text-decoration:none; color: #000;">
     <div class="card">
       <img src="img/hogwarts.jpg" class="card-img-bot" alt="hogwart">
       <div class="card-body">
@@ -151,8 +155,10 @@
         <p class="card-text">Le nouveau jeu d’Avalanche Software arrive bientôt dans vos machines new-gen et PC. Pour vous mettre dans le bain, JV vous propose d’explorer l’histoire de Poudlard dans un JV LORE dédié. Après le visionnage, vous pourrez lancer Hogwarts Legacy en toute connaissance de cause !</p>
       </div>
     </div>
+  </a>
   </div>
   <div class="col">
+    <a href="page9.html" style="text-decoration:none; color: #000;">
     <div class="card">
       <img src="img/gt.jpg" class="card-img-bot" alt="gt">
       <div class="card-body">
@@ -160,6 +166,7 @@
         <p class="card-text">Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des générations de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement utiles, sauf dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait.</p>
       </div>
     </div>
+  </a>
   </div>
 </div>
 </div>
