--- a/page2.html
+++ b/page2.html
@@ -19,71 +19,63 @@
 
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="nav-link color-nav" href="#"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page"
-            href="#" alt="logo-criticgames"> </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Jeux
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item " href="#">tests</a></li>
-                <li><a class="dropdown-item " href="#">solutions</a></li>
-                <li><a class="dropdown-item " href="#">previews</a></li>
-                <li><a class="dropdown-item " href="#">sorties</a></li>
-              </ul>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Actualités
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item " href="#">solde</a></li>
-                <li><a class="dropdown-item " href="#">culture geek</a></li>
-                <li><a class="dropdown-item " href="#">astuces</a></li>
-              </ul>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Vidéos
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item " href="#">à la une</a></li>
-                <li><a class="dropdown-item " href="#">gaming live</a></li>
-                <li><a class="dropdown-item " href="#">test</a></li>
-                <li><a class="dropdown-item " href="#">gameplay</a></li>
-              </ul>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Forum
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item " href="#">PS5</a></li>
-                <li><a class="dropdown-item " href="#">PC</a></li>
-                <li><a class="dropdown-item " href="#">Switch</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link color-nav" href="#">Contacts</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="recherches" aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">OK</button>
-          </form>
+        <div class="container-fluid">
+          <a class="nav-link color-nav" href="#"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Jeux
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/tests.htm">tests</a></li>
+                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cheats.htm">solutions</a></li>
+                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/previews.htm">previews</a></li>
+                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/sorties/dates-de-sortie.htm">sorties</a></li>
+                </ul>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Actualités
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item " href="https://www.jeuxvideo.com/soldes.htm">solde</a></li>
+                    <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cross-media.htm">culture geek</a></li>
+                  </ul>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Vidéos
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/videos-de-jeux.htm">à la une</a></li>
+                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/gaming_live.htm">gaming live</a></li>
+                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7780/">test</a></li>
+                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7365/">gameplay</a></li>
+                    </ul>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Forum
+                      </a>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-3017788-0-1-0-1-0-playstation-5.htm">PS5</a></li>
+                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-6-0-1-0-1-0-materiel-informatique.htm">PC</a></li>
+                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-3007199-0-1-0-1-0-nintendo-switch.htm">Switch</a></li>
+                      </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link color-nav" href=contact.html style="text-decoration:none; color: #000;">Contacts</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="recherches" aria-label="Search">
+              <button class="btn btn-outline-light" type="submit">OK</button>
+            </form>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
   </div>
-
   <div class="container">
     <div class="row maRow">
       <div class="col-12 col-md-6">
@@ -143,16 +135,17 @@
           A voir aussi
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie,
-            gameplay, personnages et plus encore !</li>
-          <li class="list-group-item">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images !</li>
-          <li class="list-group-item">« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur
-            PS4 et ce n'est pas un hasard !</li>
+          <li><a class="list-group-item" href="page3.html">Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie,
+            gameplay, personnages et plus encore !</a></li>
+            <li><a class="list-group-item" href="page4.html">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images !</a></li>
+            <li><a class="list-group-item" href="page5.html">« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur
+            PS4 et ce n'est pas un hasard !</a></li>
         </ul>
       </div>
     </div>
   </div>
   </div>
+
 
   <div class="page mt-4">
     <nav aria-label="Page navigation example ">
