--- a/page7.html
+++ b/page7.html
@@ -8,7 +8,7 @@
   <title>Newgames</title>
   <meta name="description" content="Découvrez news et critiques du jeux vidéo ici ! ">
   <link rel="icon" type="img/x-icon" href="img/lo.PNG">
-  <link rel="stylesheet" href="css/stylepage3.css">
+  <link rel="stylesheet" href="css/stylepage7.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unreal+Engine">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -76,36 +76,37 @@
         </div>
       </nav>
   </div>
+
   <div class="container">
     <div class="row maRow">
       <div class="col-12 col-md-6">
-      <h1>Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</h1>
-      <h2> Découvrez les dernières nouvelles sur le jeu tant attendu de Hogwarts Legacy, qui promet d'être une expérience de jeu inoubliable pour tous les fans de la saga Harry Potter.</h2>
+      <h1>The Last of Us Part 1 : soluce complète sur PC d'un des meilleurs jeux vidéo de la PS5</h1>
+      <h2>Vous avez succombé à l’envie de (re)vivre l’histoire aussi bien touchante que troublante d’Ellie et Joel avec le portage PC du remake de The Last of Us Part 1 ? Une telle aventure ne peut pas se faire sans une soluce ! Ainsi, afin de compléter le jeu à 100%, retrouvez dans cet article la solution complète du titre phare de Naughty Dog.</h2>
       </div>
-      <div class="col-12 col-md-6 imageHP" alt="HP"></div>
+      <div class="col-12 col-md-6 imageRe" alt="Re"></div>
     </div>
   </div>s
   <div class="spart container">
     <div class="article mt-4 ">
-      <p>Hogwarts Legacy est un jeu vidéo d'action-RPG qui se déroule dans l'univers de Harry Potter. Le jeu est développé par Avalanche Software et édité par Warner Bros. Interactive Entertainment. Depuis l'annonce de sa sortie en 2022, les fans attendent avec impatience de pouvoir explorer Poudlard comme jamais auparavant. Dans cet article, nous vous donnons toutes les dernières actualités sur Hogwarts Legacy.</p>
-      <h3>I. Date de sortie</h3>
-      <p> La date de sortie de Hogwarts Legacy a été annoncée pour le 7 avril 2023. Cette annonce a été faite lors de la conférence PlayStation Showcase de septembre 2022. Les fans ont été ravis de découvrir que le jeu sera disponible sur toutes les principales plateformes de jeux vidéo, y compris PlayStation, Xbox, et PC.</p>
-      <h3>II.Gameplay</h3>
-      <p>Hogwarts Legacy promet d'être une expérience de jeu immersive qui permettra aux joueurs d'explorer l'univers de Harry Potter comme jamais auparavant. Le joueur incarnera un élève de Poudlard et pourra choisir sa propre maison et ses propres cours. Il pourra également explorer les environs de Poudlard, y compris la Forêt Interdite et le village de Pré-au-Lard. Le joueur devra également faire face à des ennemis tels que les Mangemorts et les créatures magiques dangereuses.</p>
-        <h3>III.Personnages</h3>
-    <p>Les personnages de Harry Potter seront bien présents dans Hogwarts Legacy, mais le joueur aura également la possibilité de rencontrer de nouveaux personnages. Parmi eux, on trouve des professeurs de Poudlard, des élèves de différentes maisons, et des personnages non-joueurs qui pourront aider ou entraver la progression du joueur.</p>
-      <h3>IV. Personnalisation</h3>
-      <p>Le joueur aura la possibilité de personnaliser son personnage, y compris son apparence physique et sa tenue vestimentaire. Il pourra également personnaliser sa baguette magique, ce qui aura une influence sur les sorts qu'il pourra lancer.</p>
-      <h3>V.Bande-son</h3>
-      <p>La bande-son de Hogwarts Legacy a été composée par Gisèle Génolhac, qui a travaillé sur la musique de nombreux films, dont Les Choristes et La Famille Bélier. La musique du jeu est annoncée comme étant une partie importante de l'expérience de jeu. </p>
-<h3>VI.Conclusion</h3>
-<p>En conclusion, Hogwarts Legacy est un jeu très attendu qui promet une expérience de jeu inoubliable pour les fans de Harry Potter. Avec une date de sortie annoncée pour le 7 avril 2023, les joueurs n'ont plus qu'à patienter quelques mois avant de pouvoir explorer Poudlard comme jamais auparavant. La personnalisation, le gameplay et les personnages sont autant de points forts qui donneront envie aux joueurs de découvrir ce jeu unique en son genre. N'hésitez plus et plongez dans l'univers magique de Hogwarts Legacy !</p>
+      <p>The Last of Us Part 1 est un jeu vidéo d'action-aventure développé par Naughty Dog et édité par Sony Computer Entertainment. Il a été initialement publié en 2013 pour la PlayStation 3 et a depuis été remastérisé pour la PlayStation 4 et la PlayStation 5. Ce jeu est considéré comme l'un des meilleurs jeux de la PS5 et de tous les temps. Dans cet article, nous vous fournirons une soluce complète pour The Last of Us Part 1 sur PC.</p>
+<h3>Partie 1 : Les Bases du Jeu</h3>
+<p>La première partie de notre soluce expliquera les bases du jeu. Nous vous donnerons des conseils pour bien commencer votre aventure dans The Last of Us Part 1. Vous apprendrez comment contrôler les personnages, comment naviguer dans les niveaux et comment interagir avec l'environnement. Nous vous donnerons également des astuces pour économiser vos ressources et améliorer vos armes.</p>
+<h3>Partie 2 : Le Guide des Niveaux</h3>
+<p>Dans cette partie de notre soluce, nous vous guiderons à travers chaque niveau du jeu. Nous vous donnerons des conseils pour naviguer dans les niveaux, éviter les ennemis et trouver des cachettes. Nous vous montrerons également où trouver des armes et des munitions pour vous aider à vaincre les ennemis.</p>
+<h3>Partie 3 : Les Ennemis et les Boss</h3>
+<p>Dans cette partie, nous vous donnerons des conseils pour vaincre les ennemis et les boss. Nous vous montrerons comment éviter leurs attaques et comment utiliser vos armes pour les vaincre. Nous vous donnerons également des astuces pour économiser vos ressources et améliorer vos armes pour rendre les combats plus faciles.</p>
+<h3>Partie 4 : Les Objets à Collectionner</h3>
+<p>The Last of Us Part 1 regorge d'objets à collectionner, tels que des journaux, des magazines et des artefacts. Dans cette partie de notre soluce, nous vous montrerons où trouver tous ces objets à collectionner. Nous vous donnerons également des informations sur l'histoire et le monde du jeu que vous découvrirez en les trouvant.</p>
+<h3>Partie 5 : La Fin du Jeu</h3>
+<p>Dans cette partie, nous vous guiderons à travers la fin du jeu. Nous vous donnerons des conseils pour vaincre les ennemis et le boss final. Nous vous montrerons également comment terminer le jeu avec succès en obtenant tous les trophées et en débloquant toutes les réalisations.</p>
+<h3>Conclusion</h3>
+<p>Dans cette soluce complète pour The Last of Us Part 1 sur PC, nous vous avons guidé à travers chaque aspect du jeu. Nous espérons que cette soluce vous aidera à apprécier ce jeu incroyable et à le terminer avec succès. N'oubliez pas de profiter de chaque instant de cette expérience de jeu immersive et passionnante.</p>
     </div>
   </div>
   <div class="container mt-4">
     <div class="row videorow mt-4">
       <div class="col-12 col-md-6">
-        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/7slKny00ZIU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/_6v_D3QocIs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
       </div>
       <div class="see card col-12 col-md-6 vid ">
@@ -113,9 +114,11 @@
           A voir aussi
         </div>
         <ul class="list-group list-group-flush">
-          <li><a class="list-group-item" href="page2.html">The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</a></li>
-            <li><a class="list-group-item" href="page4.html">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images ! </a></li>
-              <li><a class="list-group-item" href="page5.html">« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard ! </a></li>
+          <li><a class="list-group-item" href="page6.html">Pièces hexagonales Resident Evil 4 Remake : comment résoudre l'énigme du piédestal ? </a></li>
+            <li><a class="list-group-item" href="page8.html">Hogwarts Legacy : tout ce que vous devez savoir sur l’école de Poudlard avant de commencer le jeu vidéo !
+         </a> </li>
+          <li><a class="list-group-item" href="page9.html">Gran Turismo : 20 ans plus tard, on découvre un code qui change toute votre évolution dans cet épisode culte de la série
+        </a></li>
         </ul>
       </div>
     </div>
