--- a/page9.html
+++ b/page9.html
@@ -8,7 +8,7 @@
   <title>Newgames</title>
   <meta name="description" content="Découvrez news et critiques du jeux vidéo ici ! ">
   <link rel="icon" type="img/x-icon" href="img/lo.PNG">
-  <link rel="stylesheet" href="css/stylepage3.css">
+  <link rel="stylesheet" href="css/stylepage9.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unreal+Engine">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -79,43 +79,41 @@
   <div class="container">
     <div class="row maRow">
       <div class="col-12 col-md-6">
-      <h1>Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</h1>
-      <h2> Découvrez les dernières nouvelles sur le jeu tant attendu de Hogwarts Legacy, qui promet d'être une expérience de jeu inoubliable pour tous les fans de la saga Harry Potter.</h2>
+      <h1>Gran Turismo : 20 ans plus tard, on découvre un code qui change toute votre évolution dans cet épisode culte de la série</h1>
+      <h2>Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des générations de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement utiles, sauf dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait.</h2>
       </div>
-      <div class="col-12 col-md-6 imageHP" alt="HP"></div>
+      <div class="col-12 col-md-6 imageRe" alt="Re"></div>
     </div>
   </div>s
   <div class="spart container">
     <div class="article mt-4 ">
-      <p>Hogwarts Legacy est un jeu vidéo d'action-RPG qui se déroule dans l'univers de Harry Potter. Le jeu est développé par Avalanche Software et édité par Warner Bros. Interactive Entertainment. Depuis l'annonce de sa sortie en 2022, les fans attendent avec impatience de pouvoir explorer Poudlard comme jamais auparavant. Dans cet article, nous vous donnons toutes les dernières actualités sur Hogwarts Legacy.</p>
-      <h3>I. Date de sortie</h3>
-      <p> La date de sortie de Hogwarts Legacy a été annoncée pour le 7 avril 2023. Cette annonce a été faite lors de la conférence PlayStation Showcase de septembre 2022. Les fans ont été ravis de découvrir que le jeu sera disponible sur toutes les principales plateformes de jeux vidéo, y compris PlayStation, Xbox, et PC.</p>
-      <h3>II.Gameplay</h3>
-      <p>Hogwarts Legacy promet d'être une expérience de jeu immersive qui permettra aux joueurs d'explorer l'univers de Harry Potter comme jamais auparavant. Le joueur incarnera un élève de Poudlard et pourra choisir sa propre maison et ses propres cours. Il pourra également explorer les environs de Poudlard, y compris la Forêt Interdite et le village de Pré-au-Lard. Le joueur devra également faire face à des ennemis tels que les Mangemorts et les créatures magiques dangereuses.</p>
-        <h3>III.Personnages</h3>
-    <p>Les personnages de Harry Potter seront bien présents dans Hogwarts Legacy, mais le joueur aura également la possibilité de rencontrer de nouveaux personnages. Parmi eux, on trouve des professeurs de Poudlard, des élèves de différentes maisons, et des personnages non-joueurs qui pourront aider ou entraver la progression du joueur.</p>
-      <h3>IV. Personnalisation</h3>
-      <p>Le joueur aura la possibilité de personnaliser son personnage, y compris son apparence physique et sa tenue vestimentaire. Il pourra également personnaliser sa baguette magique, ce qui aura une influence sur les sorts qu'il pourra lancer.</p>
-      <h3>V.Bande-son</h3>
-      <p>La bande-son de Hogwarts Legacy a été composée par Gisèle Génolhac, qui a travaillé sur la musique de nombreux films, dont Les Choristes et La Famille Bélier. La musique du jeu est annoncée comme étant une partie importante de l'expérience de jeu. </p>
-<h3>VI.Conclusion</h3>
-<p>En conclusion, Hogwarts Legacy est un jeu très attendu qui promet une expérience de jeu inoubliable pour les fans de Harry Potter. Avec une date de sortie annoncée pour le 7 avril 2023, les joueurs n'ont plus qu'à patienter quelques mois avant de pouvoir explorer Poudlard comme jamais auparavant. La personnalisation, le gameplay et les personnages sont autant de points forts qui donneront envie aux joueurs de découvrir ce jeu unique en son genre. N'hésitez plus et plongez dans l'univers magique de Hogwarts Legacy !</p>
-    </div>
+      <p>Gran Turismo, le célèbre jeu de course automobile, est sorti en 1997 et est rapidement devenu un succès auprès des fans de jeux vidéo. Depuis lors, la série a connu de nombreuses suites, mais la première reste chère au cœur de nombreux joueurs. Récemment, un code secret a été découvert qui pourrait bien changer la donne pour ceux qui y jouent encore aujourd'hui.</p>
+<h3>La découverte</h3> 
+<p>Ah, la bonne vieille époque des codes de triche. Cette ère plus ou moins révolue nous renvoie à des générations de machines où des séquences de boutons à la manette débloquaient des surprises particulièrement utiles, sauf dans des jeux sérieux comme Gran Turismo. Du moins… c'est ce qu'on croyait. En effet, un joueur récent a découvert un code secret qui peut changer toute votre évolution dans le jeu, même 20 ans après sa sortie.</p>  
+<h3>Le code</h3> 
+<p>Le code en question est "2580". Si vous l'entrez comme nom de profil dans le jeu, vous débloquez immédiatement 4 000 000 crédits et toutes les voitures du jeu. Oui, vous avez bien lu. Toutes les voitures. Cela signifie que vous pouvez jouer avec n'importe quelle voiture dès le début du jeu, sans avoir à gagner des courses pour débloquer de nouveaux véhicules. Et les crédits vous permettront d'acheter toutes les mises à niveau nécessaires pour les rendre plus performantes.</p>
+<h3>Ruine l'expérience ?</h3>
+<p>Bien sûr, certains pourraient argumenter que cela ruine l'expérience du jeu. Mais pour ceux qui ont déjà joué au jeu pendant des heures et des heures, ce code secret pourrait donner un nouveau souffle de vie au jeu en leur permettant d'explorer toutes les possibilités de Gran Turismo sans avoir à passer par la lourde tâche de gagner des courses pour débloquer de nouvelles voitures.</p>
+<h3>Conclusion</h3>
+<p>En fin de compte, la découverte de ce code secret montre à quel point Gran Turismo est un jeu intemporel. Même 20 ans après sa sortie, il y a encore des secrets à découvrir et de nouvelles façons de jouer à ce jeu culte. Si vous êtes un fan de Gran Turismo, peut-être qu'il est temps de dépoussiérer votre vieille PlayStation et de donner une chance à ce code secret. Qui sait, cela pourrait changer complètement votre façon de jouer à ce jeu classique.</p>
+</div>
   </div>
   <div class="container mt-4">
     <div class="row videorow mt-4">
       <div class="col-12 col-md-6">
-        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/7slKny00ZIU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/1tBUsXIkG1A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
       <div class="see card col-12 col-md-6 vid ">
         <div class="card-header">
           A voir aussi
         </div>
         <ul class="list-group list-group-flush">
-          <li><a class="list-group-item" href="page2.html">The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</a></li>
-            <li><a class="list-group-item" href="page4.html">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images ! </a></li>
-              <li><a class="list-group-item" href="page5.html">« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard ! </a></li>
+          <li><a class="list-group-item" href="page6.html">Pièces hexagonales Resident Evil 4 Remake : comment résoudre l'énigme du piédestal ?
+          </a></li>
+          <li><a class="list-group-item" href="page7.html">The Last of Us Part 1 : soluce complète sur PC d'un des meilleurs jeux vidéo de la PS5
+          </a></li>
+          <li><a class="list-group-item" href="page8.html">Hogwarts Legacy : tout ce que vous devez savoir sur l’école de Poudlard avant de commencer le jeu vidéo !
+          </a></li>
         </ul>
       </div>
     </div>
