--- a/page5.html
+++ b/page5.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Newgames</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Newgames</title>
   <meta name="description" content="Découvrez news et critiques du jeux vidéo ici ! ">
   <link rel="icon" type="img/x-icon" href="img/lo.PNG">
-    <link rel="stylesheet" href="css/stylepage4.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/stylepage5.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unreal+Engine">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 </head>
 
 <body>
@@ -16,7 +20,7 @@
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="nav-link color-nav"  href="#"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
+          <a class="nav-link color-nav" href="#"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -27,42 +31,41 @@
                   Jeux
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item " href="#">tests</a></li>
-                  <li><a class="dropdown-item " href="#">solutions</a></li>
-                  <li><a class="dropdown-item " href="#">previews</a></li>
-                  <li><a class="dropdown-item " href="#">sorties</a></li>
+                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/tests.htm">tests</a></li>
+                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cheats.htm">solutions</a></li>
+                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/previews.htm">previews</a></li>
+                  <li><a class="dropdown-item " href="https://www.jeuxvideo.com/sorties/dates-de-sortie.htm">sorties</a></li>
                 </ul>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Actualités
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item " href="#">solde</a></li>
-                    <li><a class="dropdown-item " href="#">culture geek</a></li>
-                    <li><a class="dropdown-item " href="#">astuces</a></li>
+                    <li><a class="dropdown-item " href="https://www.jeuxvideo.com/soldes.htm">solde</a></li>
+                    <li><a class="dropdown-item " href="https://www.jeuxvideo.com/cross-media.htm">culture geek</a></li>
                   </ul>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Vidéos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item " href="#">à la une</a></li>
-                      <li><a class="dropdown-item " href="#">gaming live</a></li>
-                      <li><a class="dropdown-item " href="#">test</a></li>
-                      <li><a class="dropdown-item " href="#">gameplay</a></li>
+                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/videos-de-jeux.htm">à la une</a></li>
+                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/gaming_live.htm">gaming live</a></li>
+                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7780/">test</a></li>
+                      <li><a class="dropdown-item " href="https://www.jeuxvideo.com/toutes-les-videos/type-7365/">gameplay</a></li>
                     </ul>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle color-nav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Forum
                       </a>
                       <ul class="dropdown-menu">
-                        <li><a class="dropdown-item " href="#">PS5</a></li>
-                        <li><a class="dropdown-item " href="#">PC</a></li>
-                        <li><a class="dropdown-item " href="#">Switch</a></li>
+                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-3017788-0-1-0-1-0-playstation-5.htm">PS5</a></li>
+                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-6-0-1-0-1-0-materiel-informatique.htm">PC</a></li>
+                        <li><a class="dropdown-item " href="https://www.jeuxvideo.com/forums/0-3007199-0-1-0-1-0-nintendo-switch.htm">Switch</a></li>
                       </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link color-nav" href="#">Contacts</a>
+                <a class="nav-link color-nav" href=contact.html style="text-decoration:none; color: #000;">Contacts</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -72,22 +75,20 @@
           </div>
         </div>
       </nav>
-    </section>
   </div>
 
-  <section id="gameplay">
-    <div class="presentation">
+  <div class="container">
+    <div class="row maRow">
+      <div class="col-12 col-md-6">
       <h1>« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard !</h1>
       <h2>Découvrez les dernières actualités sur Resident Evil 4 Remake, un jeu vidéo de survie et d'action très attendu, qui promet de redonner vie à l'un des classiques de Capcom.</h2>
-    </div>
-    <div class="image">
-      <div class="container">
-        <img class="zeldaimage" src="img/re4.jpg" alt="re">
       </div>
+      <div class="col-12 col-md-6 imageRe" alt="GOW"></div>
     </div>
-  </section>
-  <section class="article">
-    <p>Resident Evil 4 est l'un des jeux les plus célèbres de la franchise de jeux vidéo Resident Evil, développée par Capcom. Sorti en 2005, le jeu a marqué les esprits des joueurs avec son gameplay innovant et son histoire captivante. Capcom a annoncé en 2021 qu'un remake de Resident Evil 4 est en préparation pour les consoles de nouvelle génération. Dans cet article, nous vous donnons toutes les dernières actualités sur Resident Evil 4 Remake.</p>
+  </div>s
+  <div class="spart container">
+    <div class="article mt-4 ">
+      <p>Resident Evil 4 est l'un des jeux les plus célèbres de la franchise de jeux vidéo Resident Evil, développée par Capcom. Sorti en 2005, le jeu a marqué les esprits des joueurs avec son gameplay innovant et son histoire captivante. Capcom a annoncé en 2021 qu'un remake de Resident Evil 4 est en préparation pour les consoles de nouvelle génération. Dans cet article, nous vous donnons toutes les dernières actualités sur Resident Evil 4 Remake.</p>
 <h3>I. Date de sortie</h3>
 <p>La date de sortie de Resident Evil 4 Remake n'a pas encore été annoncée officiellement, mais il est prévu que le jeu soit disponible pour PlayStation 5, Xbox Series X/S et PC. Les fans attendent avec impatience la sortie de ce jeu très attendu.</p>
 <h3>II.Gameplay</h3>
@@ -101,73 +102,86 @@
 <h3>VI.Conclusion</h3>
 <p> En conclusion, Resident Evil 4 Remake est un jeu très attendu qui promet une expérience de jeu passionnante pour les fans de la franchise Resident Evil. Avec un gameplay amélioré, des graphismes améliorés et une histoire captivante, ce jeu est certainement un must-play pour les fans de jeux d'action et de survie. Bien que la critique de la lunette du sniper pour la version PS4 soit préoccupante, les fans peuvent être assurés que Capcom travaille dur  !</p>
 
-</section>
-  <section class="video">
-    <iframe width="50%" height="100%" src="https://www.youtube.com/embed/j5Xv2lM9wes" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <div class="card" style="width: 40%;">
-      <div class="card-header">
-        A voir aussi
-      </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</li>
-        <li class="list-group-item">Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</li>
-        <li class="list-group-item">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images !</li>
-      </ul>
     </div>
-  </section>
-  
+  </div>
+  <div class="container mt-4">
+    <div class="row videorow mt-4">
+      <div class="col-12 col-md-6">
+        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/E69tKrfEQag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-            </a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>
+      </div>
+      <div class="see card col-12 col-md-6 vid ">
+        <div class="card-header">
+          A voir aussi
+        </div>
+        <ul class="list-group list-group-flush">
+          <li><a class="list-group-item" href="page2.html">The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</a></li>
+            <li><a class="list-group-item" href="page3.html">Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</a></li>
+              <li><a class="list-group-item" href="page4.html">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images ! </a></li>
         </ul>
-      </nav>
+      </div>
+    </div>
+  </div>
+  </div>
 
-      <div class="footer-clean">
-        <footer>
-            <div class="container ">
-                <div class="row justify-content-center">
-                    <div class="col-sm-4 col-md-3 item ">
-                        <h3>Services</h3>
-                        <ul>
-                            <li><a href="#">Web design</a></li>
-                            <li><a href="#">Developement</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>A propos</h3>
-                        <ul>
-                            <li><a href="#">Equipe</a></li>
-                            <li><a href="#">Légal</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>Carieere</h3>
-                        <ul>
-                            <li><a href="#">Emplois</a></li>
-                            <li><a href="#">Succes</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-3 item social">
-                      <a href="#"><img src="img/instagram.png" class="social" alt="inst"></a><a href="#"><img src="img/linkedin.png" class="social" alt="inst"></a><a href="#"><img src="img/discord.png" class="social" alt="inst"></a>
-                      <p class="copyright">GUESDON Alexandra</p>
-                    </div>
-                </div>
-            </div>
-        </footer>
+  <div class="page mt-4">
+    <nav aria-label="Page navigation example ">
+      <ul class="pagination justify-content-center">
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+  <div class="footer-clean">
+    <footer>
+      <div class="container ">
+        <div class="row justify-content-center">
+          <div class="col-sm-4 col-md-3 item ">
+            <h3>Services</h3>
+            <ul>
+              <li><a href="#">Web design</a></li>
+              <li><a href="#">Developement</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-4 col-md-3 item">
+            <h3>A propos</h3>
+            <ul>
+              <li><a href="#">Equipe</a></li>
+              <li><a href="#">Légal</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-4 col-md-3 item">
+            <h3>Carieere</h3>
+            <ul>
+              <li><a href="#">Emplois</a></li>
+              <li><a href="#">Succes</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3 item social">
+            <a href="#"><img src="img/instagram.png" class="social" alt="inst"></a><a href="#"><img
+                src="img/linkedin.png" class="social" alt="inst"></a><a href="#"><img src="img/discord.png"
+                class="social" alt="inst"></a>
+            <p class="copyright">GUESDON Alexandra</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+      crossorigin="anonymous"></script>
 </body>
+
 </html>
