--- a/page6.html
+++ b/page6.html
@@ -8,7 +8,7 @@
   <title>Newgames</title>
   <meta name="description" content="Découvrez news et critiques du jeux vidéo ici ! ">
   <link rel="icon" type="img/x-icon" href="img/lo.PNG">
-  <link rel="stylesheet" href="css/stylepage3.css">
+  <link rel="stylesheet" href="css/stylepage6.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unreal+Engine">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -76,36 +76,55 @@
         </div>
       </nav>
   </div>
+
   <div class="container">
     <div class="row maRow">
       <div class="col-12 col-md-6">
-      <h1>Tout ce que vous devez savoir sur l'actualité de Hogwarts Legacy : date de sortie, gameplay, personnages et plus encore !</h1>
-      <h2> Découvrez les dernières nouvelles sur le jeu tant attendu de Hogwarts Legacy, qui promet d'être une expérience de jeu inoubliable pour tous les fans de la saga Harry Potter.</h2>
+      <h1>Pièces hexagonales Resident Evil 4 Remake : comment résoudre l'énigme du piédestal ?</h1>
+      <h2>Si vous avez commencé à jouer à ce Resident Evil 4 Remake, vous avez sûrement remarqué qu'il est bourré de petites énigmes et c'est justement de l'une d'elles dont nous allons vous parler dans cet article ! Plus précisément, c'est l'énigme du piédestal avec les hexagonales qui va nous intéresser. </h2>
       </div>
-      <div class="col-12 col-md-6 imageHP" alt="HP"></div>
+      <div class="col-12 col-md-6 imageRe" alt="Re"></div>
     </div>
   </div>s
   <div class="spart container">
     <div class="article mt-4 ">
-      <p>Hogwarts Legacy est un jeu vidéo d'action-RPG qui se déroule dans l'univers de Harry Potter. Le jeu est développé par Avalanche Software et édité par Warner Bros. Interactive Entertainment. Depuis l'annonce de sa sortie en 2022, les fans attendent avec impatience de pouvoir explorer Poudlard comme jamais auparavant. Dans cet article, nous vous donnons toutes les dernières actualités sur Hogwarts Legacy.</p>
-      <h3>I. Date de sortie</h3>
-      <p> La date de sortie de Hogwarts Legacy a été annoncée pour le 7 avril 2023. Cette annonce a été faite lors de la conférence PlayStation Showcase de septembre 2022. Les fans ont été ravis de découvrir que le jeu sera disponible sur toutes les principales plateformes de jeux vidéo, y compris PlayStation, Xbox, et PC.</p>
-      <h3>II.Gameplay</h3>
-      <p>Hogwarts Legacy promet d'être une expérience de jeu immersive qui permettra aux joueurs d'explorer l'univers de Harry Potter comme jamais auparavant. Le joueur incarnera un élève de Poudlard et pourra choisir sa propre maison et ses propres cours. Il pourra également explorer les environs de Poudlard, y compris la Forêt Interdite et le village de Pré-au-Lard. Le joueur devra également faire face à des ennemis tels que les Mangemorts et les créatures magiques dangereuses.</p>
-        <h3>III.Personnages</h3>
-    <p>Les personnages de Harry Potter seront bien présents dans Hogwarts Legacy, mais le joueur aura également la possibilité de rencontrer de nouveaux personnages. Parmi eux, on trouve des professeurs de Poudlard, des élèves de différentes maisons, et des personnages non-joueurs qui pourront aider ou entraver la progression du joueur.</p>
-      <h3>IV. Personnalisation</h3>
-      <p>Le joueur aura la possibilité de personnaliser son personnage, y compris son apparence physique et sa tenue vestimentaire. Il pourra également personnaliser sa baguette magique, ce qui aura une influence sur les sorts qu'il pourra lancer.</p>
-      <h3>V.Bande-son</h3>
-      <p>La bande-son de Hogwarts Legacy a été composée par Gisèle Génolhac, qui a travaillé sur la musique de nombreux films, dont Les Choristes et La Famille Bélier. La musique du jeu est annoncée comme étant une partie importante de l'expérience de jeu. </p>
-<h3>VI.Conclusion</h3>
-<p>En conclusion, Hogwarts Legacy est un jeu très attendu qui promet une expérience de jeu inoubliable pour les fans de Harry Potter. Avec une date de sortie annoncée pour le 7 avril 2023, les joueurs n'ont plus qu'à patienter quelques mois avant de pouvoir explorer Poudlard comme jamais auparavant. La personnalisation, le gameplay et les personnages sont autant de points forts qui donneront envie aux joueurs de découvrir ce jeu unique en son genre. N'hésitez plus et plongez dans l'univers magique de Hogwarts Legacy !</p>
+      <p>Resident Evil 4 Remake est un jeu d'action-aventure populaire dans lequel les joueurs doivent résoudre des énigmes complexes pour progresser dans le jeu. L'une de ces énigmes est celle des pièces hexagonales sur le piédestal.
+        Dans cette énigme, les joueurs doivent trouver quatre pièces hexagonales pour les placer sur un piédestal. Chaque pièce est de couleur différente et comporte une gravure unique. Les joueurs doivent trouver et placer les pièces dans l'ordre correct pour résoudre l'énigme.
+        </p>
+<h3>Partie 1: Où trouver les pièces hexagonales ?</h3>
+<p>La première étape pour résoudre cette énigme est de trouver les quatre pièces hexagonales. Elles sont réparties dans différents endroits du jeu. Voici où les trouver :
+
+  La première pièce hexagonale se trouve dans la salle des trophées du château. Pour y accéder, les joueurs doivent utiliser la clé de l'aigle et la clé de la salamandre pour ouvrir les portes verrouillées. La pièce hexagonale est située sur un tableau.
+  
+  La deuxième pièce hexagonale se trouve dans le laboratoire. Les joueurs doivent utiliser la clé du serpent pour accéder à cette zone. La pièce hexagonale est cachée derrière une armoire.
+  
+  La troisième pièce hexagonale se trouve dans la grotte. Les joueurs doivent traverser la grotte pour atteindre une zone où ils peuvent utiliser la clé de la panthère pour ouvrir une porte verrouillée. La pièce hexagonale est située sur une statue.
+  
+  La quatrième pièce hexagonale se trouve dans le château. Les joueurs doivent utiliser la clé de la reine pour accéder à cette zone. La pièce hexagonale est cachée dans un placard.
+  
+  </p>
+<h3>Partie 2: Comment placer les pièces hexagonales sur le piédestal ?</h3>
+<p>Une fois que les joueurs ont trouvé les quatre pièces hexagonales, ils doivent les placer dans le bon ordre sur le piédestal. Voici comment résoudre cette énigme :
+
+  Placez la pièce hexagonale rouge sur la première encoche du piédestal.
+  
+  Placez la pièce hexagonale verte sur la deuxième encoche du piédestal.
+  
+  Placez la pièce hexagonale bleue sur la troisième encoche du piédestal.
+  
+  Enfin, placez la pièce hexagonale jaune sur la quatrième et dernière encoche du piédestal.
+  
+  Une fois que les joueurs ont placé les pièces hexagonales dans le bon ordre, une porte s'ouvrira et ils pourront continuer leur progression dans le jeu.</p>
+<h3>Conclusion</h3>
+<p>La résolution de l'énigme des pièces hexagonales sur le piédestal est une étape importante pour progresser dans Resident Evil 4 Remake. Les joueurs doivent trouver les quatre pièces hexagonales dans différents endroits du jeu, puis les placer dans le bon ordre sur le piédestal pour ouvrir la porte et continuer leur aventure.</p>
+
+
     </div>
   </div>
   <div class="container mt-4">
     <div class="row videorow mt-4">
       <div class="col-12 col-md-6">
-        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/7slKny00ZIU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="60%" height="100%" src="https://www.youtube.com/embed/E69tKrfEQag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
       </div>
       <div class="see card col-12 col-md-6 vid ">
@@ -113,9 +132,11 @@
           A voir aussi
         </div>
         <ul class="list-group list-group-flush">
-          <li><a class="list-group-item" href="page2.html">The Legend of Zelda: Tears of the Kingdom - Un retour épique vers le royaume d'Hyrule</a></li>
-            <li><a class="list-group-item" href="page4.html">Diablo 4 X God of War : vous pouvez jouer Kratos, la preuve en images ! </a></li>
-              <li><a class="list-group-item" href="page5.html">« La lunette du sniper est inutilisable » Resident Evil 4 Remake prend cher sur PS4 et ce n'est pas un hasard ! </a></li>
+          <li><a class="list-group-item" href="page8.html">Hogwarts Legacy : tout ce que vous devez savoir sur l’école de Poudlard avant de commencer le jeu vidéo ! </a></li>
+            <li><a class="list-group-item" href="page7.html">The Last of Us Part 1 : soluce complète sur PC d'un des meilleurs jeux vidéo de la PS5
+          </a></li>
+          <li><a class="list-group-item" href="page9.html">Gran Turismo : 20 ans plus tard, on découvre un code qui change toute votre évolution dans cet épisode culte de la série
+          </a></li>
         </ul>
       </div>
     </div>
