--- a/index.html
+++ b/index.html
@@ -176,15 +176,15 @@
     <nav aria-label="Page navigation example ">
         <ul class="pagination justify-content-center">
           <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
+            <a class="page-link" href="page9.html" aria-label="Previous">
               <span aria-hidden="true">&laquo;</span>
             </a>
           </li>
           <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="page2.html">2</a></li>
+          <li class="page-item"><a class="page-link" href="page3.html">3</a></li>
           <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
+            <a class="page-link" href="page2.html" aria-label="Next">
               <span aria-hidden="true">&raquo;</span>
             </a>
           </li>
@@ -218,7 +218,7 @@
                         </ul>
                     </div>
                     <div class="col-lg-3 item social">
-                      <a href="#"><img src="img/instagram.png" class="social" alt="inst"></a><a href="#"><img src="img/linkedin.png" class="social" alt="inst"></a><a href="#"><img src="img/discord.png" class="social" alt="inst"></a>
+                      <a href="https://www.instagram.com/"><img src="img/instagram.png" class="social" alt="inst"></a><a href="https://www.linkedin.com/in/alexandra-guesdon-communication/"><img src="img/linkedin.png" class="social" alt="inst"></a><a href="https://discord.com/login?redirect_to=%2Fchannels%2F%40me"><img src="img/discord.png" class="social" alt="inst"></a>
                       <p class="copyright">GUESDON Alexandra</p>
                     </div>
                 </div>
