--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="nav-link color-nav" href="#"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
+          <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -151,15 +151,15 @@
     <nav aria-label="Page navigation example ">
       <ul class="pagination justify-content-center">
         <li class="page-item">
-          <a class="page-link" href="#" aria-label="Previous">
+          <a class="page-link" href="index.html" aria-label="Previous">
             <span aria-hidden="true">&laquo;</span>
           </a>
         </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="index.html">1</a></li>
         <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="page3.html">3</a></li>
         <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
+          <a class="page-link" href="page3.html" aria-label="Next">
             <span aria-hidden="true">&raquo;</span>
           </a>
         </li>
@@ -169,37 +169,35 @@
 
   <div class="footer-clean">
     <footer>
-      <div class="container ">
-        <div class="row justify-content-center">
-          <div class="col-sm-4 col-md-3 item ">
-            <h3>Services</h3>
-            <ul>
-              <li><a href="#">Web design</a></li>
-              <li><a href="#">Developement</a></li>
-            </ul>
-          </div>
-          <div class="col-sm-4 col-md-3 item">
-            <h3>A propos</h3>
-            <ul>
-              <li><a href="#">Equipe</a></li>
-              <li><a href="#">Légal</a></li>
-            </ul>
-          </div>
-          <div class="col-sm-4 col-md-3 item">
-            <h3>Carieere</h3>
-            <ul>
-              <li><a href="#">Emplois</a></li>
-              <li><a href="#">Succes</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-3 item social">
-            <a href="#"><img src="img/instagram.png" class="social" alt="inst"></a><a href="#"><img
-                src="img/linkedin.png" class="social" alt="inst"></a><a href="#"><img src="img/discord.png"
-                class="social" alt="inst"></a>
-            <p class="copyright">GUESDON Alexandra</p>
-          </div>
+        <div class="container ">
+            <div class="row justify-content-center">
+                <div class="col-sm-4 col-md-3 item ">
+                    <h3>Services</h3>
+                    <ul>
+                        <li><a href="#">Web design</a></li>
+                        <li><a href="#">Developement</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 col-md-3 item">
+                    <h3>A propos</h3>
+                    <ul>
+                        <li><a href="#">Equipe</a></li>
+                        <li><a href="#">Légal</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 col-md-3 item">
+                    <h3>Carieere</h3>
+                    <ul>
+                        <li><a href="#">Emplois</a></li>
+                        <li><a href="#">Succes</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 item social">
+                  <a href="https://www.instagram.com/"><img src="img/instagram.png" class="social" alt="inst"></a><a href="https://www.linkedin.com/in/alexandra-guesdon-communication/"><img src="img/linkedin.png" class="social" alt="inst"></a><a href="https://discord.com/login?redirect_to=%2Fchannels%2F%40me"><img src="img/discord.png" class="social" alt="inst"></a>
+                  <p class="copyright">GUESDON Alexandra</p>
+                </div>
+            </div>
         </div>
-      </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
