--- a/contact.html
+++ b/contact.html
@@ -13,16 +13,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
 
-</style>
 </head>
 <body>
-  
+
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="nav-link color-nav" href="#"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" href="#" alt="logo-criticgames"> </a>
+          <a class="nav-link color-nav" href="index.html"><img class="navbar-brand logo" src="img/logoo.PNG" aria-current="page" alt="logo-criticgames"> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -78,6 +76,7 @@
         </div>
       </nav>
   </div>
+  
 <div class="container">
 <h3>Contact Form</h3>
 <div class="container">
@@ -102,6 +101,40 @@
   </form>
 </div>
 
+
 </div>
+
+<div class="footer-clean">
+  <footer>
+      <div class="container foot">
+          <div class="row justify-content-center">
+              <div class="col-sm-4 col-md-3 item ">
+                  <h3>Services</h3>
+                  <ul>
+                      <li><a href="#">Web design</a></li>
+                      <li><a href="#">Developement</a></li>
+                  </ul>
+              </div>
+              <div class="col-sm-4 col-md-3 item">
+                  <h3>A propos</h3>
+                  <ul>
+                      <li><a href="#">Equipe</a></li>
+                      <li><a href="#">Légal</a></li>
+                  </ul>
+              </div>
+              <div class="col-sm-4 col-md-3 item">
+                  <h3>Carieere</h3>
+                  <ul>
+                      <li><a href="#">Emplois</a></li>
+                      <li><a href="#">Succes</a></li>
+                  </ul>
+              </div>
+              <div class="col-lg-3 item social">
+                <a href="https://www.instagram.com/"><img src="img/instagram.png" class="social" alt="inst"></a><a href="https://www.linkedin.com/in/alexandra-guesdon-communication/"><img src="img/linkedin.png" class="social" alt="inst"></a><a href="https://discord.com/login?redirect_to=%2Fchannels%2F%40me"><img src="img/discord.png" class="social" alt="inst"></a>
+                <p class="copyright">GUESDON Alexandra</p>
+              </div>
+        </div>
+      </div>
+  </footer>
 </body>
 </html>
